Added AASA for deeplinks

--- a/_config.yml
+++ b/_config.yml
@@ -59,3 +59,11 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+# Include the hidden `.well-known` directory so verification files are copied.
+include:
+  - .well-known
+
+# Exclude application-specific helper files that should not be publicly served.
+exclude:
+  - .well-known/appspecific
